--- a/get_stats_alignment.ipynb
+++ b/get_stats_alignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,253 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sample_1_c100_Flu__1 1\n",
-      "sample_1_c100_Flu__2 2\n",
-      "sample_1_c100_Flu__3 3\n",
-      "sample_1_c100_Flu__4 4\n",
-      "sample_1_c100_Flu__5 5\n",
-      "sample_1_c100_Flu__6 6\n",
-      "sample_1_c100_Flu__7 7\n",
-      "sample_1_c100_Flu__8 8\n",
-      "sample_2_c100_Flu__1 1\n",
-      "sample_2_c100_Flu__2 2\n",
-      "sample_2_c100_Flu__3 3\n",
-      "sample_2_c100_Flu__4 4\n",
-      "sample_2_c100_Flu__5 5\n",
-      "sample_2_c100_Flu__6 6\n",
-      "sample_2_c100_Flu__7 7\n",
-      "sample_2_c100_Flu__8 8\n",
-      "sample_3_c100_Flu__1 1\n",
-      "sample_3_c100_Flu__2 2\n",
-      "sample_3_c100_Flu__3 3\n",
-      "sample_3_c100_Flu__4 4\n",
-      "sample_3_c100_Flu__5 5\n",
-      "sample_3_c100_Flu__6 6\n",
-      "sample_3_c100_Flu__7 7\n",
-      "sample_3_c100_Flu__8 8\n",
-      "sample_4_c100_Flu__1 1\n",
-      "sample_4_c100_Flu__2 2\n",
-      "sample_4_c100_Flu__3 3\n",
-      "sample_4_c100_Flu__4 4\n",
-      "sample_4_c100_Flu__5 5\n",
-      "sample_4_c100_Flu__6 6\n",
-      "sample_4_c100_Flu__7 7\n",
-      "sample_4_c100_Flu__8 8\n",
-      "sample_5_c100_Flu__1 1\n",
-      "sample_5_c100_Flu__2 2\n",
-      "sample_5_c100_Flu__3 3\n",
-      "sample_5_c100_Flu__4 4\n",
-      "sample_5_c100_Flu__5 5\n",
-      "sample_5_c100_Flu__6 6\n",
-      "sample_5_c100_Flu__7 7\n",
-      "sample_5_c100_Flu__8 8\n",
-      "sample_6_c100_Flu__1 1\n",
-      "sample_6_c100_Flu__2 2\n",
-      "sample_6_c100_Flu__3 3\n",
-      "sample_6_c100_Flu__4 4\n",
-      "sample_6_c100_Flu__5 5\n",
-      "sample_6_c100_Flu__6 6\n",
-      "sample_6_c100_Flu__7 7\n",
-      "sample_6_c100_Flu__8 8\n",
-      "sample_7_c100_Flu__1 1\n",
-      "sample_7_c100_Flu__2 2\n",
-      "sample_7_c100_Flu__3 3\n",
-      "sample_7_c100_Flu__4 4\n",
-      "sample_7_c100_Flu__5 5\n",
-      "sample_7_c100_Flu__6 6\n",
-      "sample_7_c100_Flu__7 7\n",
-      "sample_7_c100_Flu__8 8\n",
-      "sample_8_c100_Flu__1 1\n",
-      "sample_8_c100_Flu__2 2\n",
-      "sample_8_c100_Flu__3 3\n",
-      "sample_8_c100_Flu__4 4\n",
-      "sample_8_c100_Flu__5 5\n",
-      "sample_8_c100_Flu__6 6\n",
-      "sample_8_c100_Flu__7 7\n",
-      "sample_8_c100_Flu__8 8\n",
-      "sample_9_c100_Flu__1 1\n",
-      "sample_9_c100_Flu__2 2\n",
-      "sample_9_c100_Flu__3 3\n",
-      "sample_9_c100_Flu__4 4\n",
-      "sample_9_c100_Flu__5 5\n",
-      "sample_9_c100_Flu__6 6\n",
-      "sample_9_c100_Flu__7 7\n",
-      "sample_9_c100_Flu__8 8\n",
-      "sample_10_c100_Flu__1 1\n",
-      "sample_10_c100_Flu__2 2\n",
-      "sample_10_c100_Flu__3 3\n",
-      "sample_10_c100_Flu__4 4\n",
-      "sample_10_c100_Flu__5 5\n",
-      "sample_10_c100_Flu__6 6\n",
-      "sample_10_c100_Flu__7 7\n",
-      "sample_10_c100_Flu__8 8\n",
-      "sample_11_c100_Flu__1 1\n",
-      "sample_11_c100_Flu__2 2\n",
-      "sample_11_c100_Flu__3 3\n",
-      "sample_11_c100_Flu__4 4\n",
-      "sample_11_c100_Flu__5 5\n",
-      "sample_11_c100_Flu__6 6\n",
-      "sample_11_c100_Flu__7 7\n",
-      "sample_11_c100_Flu__8 8\n",
-      "sample_12_c100_Flu__1 1\n",
-      "sample_12_c100_Flu__2 2\n",
-      "sample_12_c100_Flu__3 3\n",
-      "sample_12_c100_Flu__4 4\n",
-      "sample_12_c100_Flu__5 5\n",
-      "sample_12_c100_Flu__6 6\n",
-      "sample_12_c100_Flu__7 7\n",
-      "sample_12_c100_Flu__8 8\n",
-      "sample_13_c100_Flu__1 1\n",
-      "sample_13_c100_Flu__2 2\n",
-      "sample_13_c100_Flu__3 3\n",
-      "sample_13_c100_Flu__4 4\n",
-      "sample_13_c100_Flu__5 5\n",
-      "sample_13_c100_Flu__6 6\n",
-      "sample_13_c100_Flu__7 7\n",
-      "sample_13_c100_Flu__8 8\n",
-      "sample_14_c100_Flu__1 1\n",
-      "sample_14_c100_Flu__2 2\n",
-      "sample_14_c100_Flu__3 3\n",
-      "sample_14_c100_Flu__4 4\n",
-      "sample_14_c100_Flu__5 5\n",
-      "sample_14_c100_Flu__6 6\n",
-      "sample_14_c100_Flu__7 7\n",
-      "sample_14_c100_Flu__8 8\n",
-      "sample_15_c100_Flu__1 1\n",
-      "sample_15_c100_Flu__2 2\n",
-      "sample_15_c100_Flu__3 3\n",
-      "sample_15_c100_Flu__4 4\n",
-      "sample_15_c100_Flu__5 5\n",
-      "sample_15_c100_Flu__6 6\n",
-      "sample_15_c100_Flu__7 7\n",
-      "sample_15_c100_Flu__8 8\n",
-      "sample_16_c100_Flu__1 1\n",
-      "sample_16_c100_Flu__2 2\n",
-      "sample_16_c100_Flu__3 3\n",
-      "sample_16_c100_Flu__4 4\n",
-      "sample_16_c100_Flu__5 5\n",
-      "sample_16_c100_Flu__6 6\n",
-      "sample_16_c100_Flu__7 7\n",
-      "sample_16_c100_Flu__8 8\n",
-      "sample_17_c100_Flu__1 1\n",
-      "sample_17_c100_Flu__2 2\n",
-      "sample_17_c100_Flu__3 3\n",
-      "sample_17_c100_Flu__4 4\n",
-      "sample_17_c100_Flu__5 5\n",
-      "sample_17_c100_Flu__6 6\n",
-      "sample_17_c100_Flu__7 7\n",
-      "sample_17_c100_Flu__8 8\n",
-      "sample_18_c100_Flu__1 1\n",
-      "sample_18_c100_Flu__2 2\n",
-      "sample_18_c100_Flu__3 3\n",
-      "sample_18_c100_Flu__4 4\n",
-      "sample_18_c100_Flu__5 5\n",
-      "sample_18_c100_Flu__6 6\n",
-      "sample_18_c100_Flu__7 7\n",
-      "sample_18_c100_Flu__8 8\n",
-      "sample_19_c100_Flu__1 1\n",
-      "sample_19_c100_Flu__2 2\n",
-      "sample_19_c100_Flu__3 3\n",
-      "sample_19_c100_Flu__4 4\n",
-      "sample_19_c100_Flu__5 5\n",
-      "sample_19_c100_Flu__6 6\n",
-      "sample_19_c100_Flu__7 7\n",
-      "sample_19_c100_Flu__8 8\n",
-      "sample_20_c100_Flu__1 1\n",
-      "sample_20_c100_Flu__2 2\n",
-      "sample_20_c100_Flu__3 3\n",
-      "sample_20_c100_Flu__4 4\n",
-      "sample_20_c100_Flu__5 5\n",
-      "sample_20_c100_Flu__6 6\n",
-      "sample_20_c100_Flu__7 7\n",
-      "sample_20_c100_Flu__8 8\n",
-      "sample_21_c100_Flu__1 1\n",
-      "sample_21_c100_Flu__2 2\n",
-      "sample_21_c100_Flu__3 3\n",
-      "sample_21_c100_Flu__4 4\n",
-      "sample_21_c100_Flu__5 5\n",
-      "sample_21_c100_Flu__6 6\n",
-      "sample_21_c100_Flu__7 7\n",
-      "sample_21_c100_Flu__8 8\n",
-      "sample_22_c100_Flu__1 1\n",
-      "sample_22_c100_Flu__2 2\n",
-      "sample_22_c100_Flu__3 3\n",
-      "sample_22_c100_Flu__4 4\n",
-      "sample_22_c100_Flu__5 5\n",
-      "sample_22_c100_Flu__6 6\n",
-      "sample_22_c100_Flu__7 7\n",
-      "sample_22_c100_Flu__8 8\n",
-      "sample_23_c100_Flu__1 1\n",
-      "sample_23_c100_Flu__2 2\n",
-      "sample_23_c100_Flu__3 3\n",
-      "sample_23_c100_Flu__4 4\n",
-      "sample_23_c100_Flu__5 5\n",
-      "sample_23_c100_Flu__6 6\n",
-      "sample_23_c100_Flu__7 7\n",
-      "sample_23_c100_Flu__8 8\n",
-      "sample_24_c100_Flu__1 1\n",
-      "sample_24_c100_Flu__2 2\n",
-      "sample_24_c100_Flu__3 3\n",
-      "sample_24_c100_Flu__4 4\n",
-      "sample_24_c100_Flu__5 5\n",
-      "sample_24_c100_Flu__6 6\n",
-      "sample_24_c100_Flu__7 7\n",
-      "sample_24_c100_Flu__8 8\n",
-      "sample_25_c100_Flu__1 1\n",
-      "sample_25_c100_Flu__2 2\n",
-      "sample_25_c100_Flu__3 3\n",
-      "sample_25_c100_Flu__4 4\n",
-      "sample_25_c100_Flu__5 5\n",
-      "sample_25_c100_Flu__6 6\n",
-      "sample_25_c100_Flu__7 7\n",
-      "sample_25_c100_Flu__8 8\n",
-      "sample_26_c100_Flu__1 1\n",
-      "sample_26_c100_Flu__2 2\n",
-      "sample_26_c100_Flu__3 3\n",
-      "sample_26_c100_Flu__4 4\n",
-      "sample_26_c100_Flu__5 5\n",
-      "sample_26_c100_Flu__6 6\n",
-      "sample_26_c100_Flu__7 7\n",
-      "sample_26_c100_Flu__8 8\n",
-      "sample_27_c100_Flu__1 1\n",
-      "sample_27_c100_Flu__2 2\n",
-      "sample_27_c100_Flu__3 3\n",
-      "sample_27_c100_Flu__4 4\n",
-      "sample_27_c100_Flu__5 5\n",
-      "sample_27_c100_Flu__6 6\n",
-      "sample_27_c100_Flu__7 7\n",
-      "sample_27_c100_Flu__8 8\n",
-      "sample_28_c100_Flu__1 1\n",
-      "sample_28_c100_Flu__2 2\n",
-      "sample_28_c100_Flu__3 3\n",
-      "sample_28_c100_Flu__4 4\n",
-      "sample_28_c100_Flu__5 5\n",
-      "sample_28_c100_Flu__6 6\n",
-      "sample_28_c100_Flu__7 7\n",
-      "sample_28_c100_Flu__8 8\n",
-      "sample_29_c100_Flu__1 1\n",
-      "sample_29_c100_Flu__2 2\n",
-      "sample_29_c100_Flu__3 3\n",
-      "sample_29_c100_Flu__4 4\n",
-      "sample_29_c100_Flu__5 5\n",
-      "sample_29_c100_Flu__6 6\n",
-      "sample_29_c100_Flu__7 7\n",
-      "sample_29_c100_Flu__8 8\n",
-      "sample_30_c100_Flu__1 1\n",
-      "sample_30_c100_Flu__2 2\n",
-      "sample_30_c100_Flu__3 3\n",
-      "sample_30_c100_Flu__4 4\n",
-      "sample_30_c100_Flu__5 5\n",
-      "sample_30_c100_Flu__6 6\n",
-      "sample_30_c100_Flu__7 7\n",
-      "sample_30_c100_Flu__8 8\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'snippy_consensus.fasta'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 49\u001b[0m\n\u001b[1;32m     46\u001b[0m             writer\u001b[39m.\u001b[39mwriterow([key, \u001b[39m\"\u001b[39m\u001b[39msnippy\u001b[39m\u001b[39m\"\u001b[39m, value[\u001b[39m\"\u001b[39m\u001b[39msnippy\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m], value[\u001b[39m\"\u001b[39m\u001b[39msnippy\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m1\u001b[39m], value[\u001b[39m\"\u001b[39m\u001b[39msnippy\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m2\u001b[39m], value[\u001b[39m\"\u001b[39m\u001b[39msnippy\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m3\u001b[39m]])\n\u001b[1;32m     47\u001b[0m             writer\u001b[39m.\u001b[39mwriterow([key, \u001b[39m\"\u001b[39m\u001b[39miVar\u001b[39m\u001b[39m\"\u001b[39m, value[\u001b[39m\"\u001b[39m\u001b[39miVar\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m], value[\u001b[39m\"\u001b[39m\u001b[39miVar\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m1\u001b[39m], value[\u001b[39m\"\u001b[39m\u001b[39miVar\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m2\u001b[39m], value[\u001b[39m\"\u001b[39m\u001b[39miVar\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m3\u001b[39m]])\n\u001b[0;32m---> 49\u001b[0m main()\n",
+      "Cell \u001b[0;32mIn[4], line 5\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m iVar_file \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39miVar_consensus.fasta\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m reference_file \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39muser/references/A_H3N2_A_Victoria_361_2011.fasta\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m snippy \u001b[39m=\u001b[39m get_fasta_sequences(snippy_file)\n\u001b[1;32m      6\u001b[0m iVar \u001b[39m=\u001b[39m get_fasta_sequences(iVar_file)\n\u001b[1;32m      7\u001b[0m reference \u001b[39m=\u001b[39m get_fasta_sequences(reference_file)\n",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m, in \u001b[0;36mget_fasta_sequences\u001b[0;34m(file_name)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_fasta_sequences\u001b[39m(file_name: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mlist\u001b[39m:\n\u001b[0;32m----> 5\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(file_name, \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m handler:\n\u001b[1;32m      6\u001b[0m         sequences \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(SeqIO\u001b[39m.\u001b[39mparse(handler, \u001b[39m'\u001b[39m\u001b[39mfasta\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[1;32m      7\u001b[0m         \u001b[39mreturn\u001b[39;00m sequences\n",
+      "File \u001b[0;32m~/mambaforge/envs/insaflu/lib/python3.10/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'snippy_consensus.fasta'"
      ]
     }
    ],
@@ -353,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:26:04) [GCC 10.4.0]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
