--- a/scripts_to_change_ref/find_mutation_rate_Mpox.ipynb
+++ b/scripts_to_change_ref/find_mutation_rate_Mpox.ipynb
@@ -762,7 +762,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_11",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -776,12 +776,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "83c3213e4a41ae333eafe8611f8599b21ca2e6ebf066a6d9431a0850a61079f4"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
